--- a/src/app/guest/weather-five/weather-five.component.css
+++ b/src/app/guest/weather-five/weather-five.component.css
@@ -61,6 +61,10 @@
     display: inline-block;
 }
 
+.mobile {
+    display: none;
+}
+
 .home a,
 .favorites a {
     padding: 16px 30px;
@@ -68,7 +72,6 @@
     color: rgb(255, 255, 255);
     cursor: pointer;
     border: none;
-    border-radius: 6px;
     background: rgba(0, 0, 0, 0.3);
 }
 
@@ -119,7 +122,7 @@ tr:hover {
 th,
 td {
     width: 100%;
-    padding: 12px;
+    padding: 14px;
     font-size: 18px;
     white-space: nowrap;
     transition: 0.3s;
@@ -143,13 +146,13 @@ td img:hover {
     justify-content: center;
     align-items: center;
     height: 90%;
-    padding-bottom: 150px;
+    padding-bottom: 6%;
     /* border: 2px solid black; */
 }
 
 .city h1 {
     width: 100%;
-    margin: 60px 0;
+    margin-bottom: 60px;
     font-size: 40px;
     line-height: 44px;
     text-align: center;
@@ -185,11 +188,6 @@ td img:hover {
     text-align: center;
 }
 
-.icon-svg {
-    text-align: center;
-    /* border: 2px solid black; */
-}
-
 .icon-svg img {
     width: 80px;
     /* border: 2px solid black; */
@@ -220,9 +218,31 @@ hr {
     .favorites {
         margin: 0 14px;
     }
+
+    th,
+    td {
+        padding: 12px;
+    }
+
+    .my-content {
+        padding-bottom: 8%;
+    }
 }
 
 @media(max-width: 1020px) {
+    .favorites {
+        display: none;
+    }
+
+    .mobile {
+        display: block;
+    }
+
+    .city h1 {
+        margin-bottom: 50px;
+        font-size: 36px;
+        line-height: 40px;
+    }
 
     .home a,
     .favorites a {
@@ -236,23 +256,37 @@ hr {
         font-size: 17px;
     }
 
+    .my-content {
+        padding-bottom: 10%;
+    }
+
+    .cards {
+        gap: 16px;
+    }
+
     .card {
         min-width: 200px;
     }
 
-    .card h1 {
-        margin: 4px 0;
-        font-size: 32px;
-        line-height: 36px;
+    .card p {
+        margin-bottom: 4px;
     }
 
     .temperature {
         font-size: 36px;
-        line-height: 36px;
     }
 
     .icon-svg img {
         width: 70px;
+    }
+
+    .icon-svg p {
+        font-size: 22px;
+        line-height: 26px;
+    }
+
+    hr {
+        margin: 14px 0;
     }
 }
 
@@ -261,22 +295,14 @@ hr {
         width: 100%;
     }
 
-    .search form {
-        padding: 12px 16px;
-    }
-
-    .search input {
-        font-size: 16px;
-    }
-
     th,
     td {
         padding: 8px;
         font-size: 16px;
     }
 
-    .card {
-        margin: 16px 0;
+    .my-content {
+        padding-bottom: 12%;
     }
 }
 
@@ -289,7 +315,11 @@ hr {
     }
 
     .search form {
-        padding: 10px 14px;
+        padding: 12px 14px;
+    }
+
+    .search input {
+        font-size: 14px;
     }
 
     th,
@@ -298,35 +328,46 @@ hr {
         font-size: 14px;
     }
 
-    .card {
-        min-width: 180px;
-        margin: 14px 0;
-        padding: 20px 60px;
+    .my-content {
+        padding-bottom: 14%;
     }
 
-    .card h1 {
-        margin: 2px 0;
-        font-size: 28px;
-        line-height: 32px;
+    .city h1 {
+        margin-bottom: 40px;
+        font-size: 32px;
+        line-height: 36px;
+    }
+
+    .cards {
+        gap: 14px;
+    }
+
+    .card {
+        min-width: 180px;
+    }
+
+    .card p {
+        margin-bottom: 2px;
     }
 
     .temperature {
-        font-size: 30px;
-        line-height: 30px;
+        font-size: 32px;
     }
 
     .icon-svg img {
         width: 60px;
     }
 
-    .history {
-        width: 100%;
-        overflow: scroll;
+    .icon-svg p {
+        font-size: 20px;
+        line-height: 24px;
+    }
+
+    hr {
+        margin: 12px 0;
     }
 }
 
-@media(max-width: 350px) {
-    .card {
-        padding: 20px 40px;
-    }
-}
+/* @media(max-width: 350px) {
+
+} */
