--- a/src/app/guest/weather/weather.component.css
+++ b/src/app/guest/weather/weather.component.css
@@ -61,6 +61,10 @@
     display: inline-block;
 }
 
+.mobile {
+    display: none;
+}
+
 .home a,
 .favorites a {
     padding: 16px 30px;
@@ -68,7 +72,6 @@
     color: rgb(255, 255, 255);
     cursor: pointer;
     border: none;
-    border-radius: 6px;
     background: rgba(0, 0, 0, 0.3);
 }
 
@@ -119,7 +122,7 @@ tr:hover {
 th,
 td {
     width: 100%;
-    padding: 12px;
+    padding: 14px;
     font-size: 18px;
     white-space: nowrap;
     transition: 0.3s;
@@ -267,9 +270,21 @@ hr {
     .favorites {
         margin: 0 14px;
     }
+
+    th,
+    td {
+        padding: 12px;
+    }
 }
 
 @media(max-width: 1020px) {
+    .favorites {
+        display: none;
+    }
+
+    .mobile {
+        display: block;
+    }
 
     .home a,
     .favorites a {
@@ -304,14 +319,6 @@ hr {
         width: 100%;
     }
 
-    .search form {
-        padding: 12px 16px;
-    }
-
-    .search input {
-        font-size: 16px;
-    }
-
     th,
     td {
         padding: 8px;
@@ -332,7 +339,11 @@ hr {
     }
 
     .search form {
-        padding: 10px 14px;
+        padding: 12px 14px;
+    }
+
+    .search input {
+        font-size: 14px;
     }
 
     th,
