--- a/src/app/guest/weather/weather.component.html
+++ b/src/app/guest/weather/weather.component.html
@@ -17,8 +17,8 @@
                 </form>
             </div>
 
-            <!-- FAVORITES ------------------------------------------------------------------- -->
-            <div class="favorites">
+            <!-- FAVORITES - HOVER ----------------------------------------------------------- -->
+            <div class="favorites desktop">
                 <a>Favs</a>
                 <div class="dropdown-fav">
                     <table>
@@ -39,6 +39,32 @@
                         </tbody>
                     </table>
                 </div>
+            </div>
+
+            <!-- FAVORITES - MENU BUTTON ----------------------------------------------------- -->
+            <div class="favorites mobile">
+                <a [matMenuTriggerFor]="beforeMenu">Favs</a>
+                <mat-menu #beforeMenu="matMenu" xPosition="before">
+                    <a>
+                        <table>
+                            <thead>
+                                <tr *ngIf="favorites.length<=0">
+                                    <td colspan="4"> - - - empty list - - -</td>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr *ngFor="let item of favorites; index as ind" (click)="getFavoriteCity(item)">
+                                    <td> {{ind+1}} </td>
+                                    <td> {{item.currentCity}} </td>
+                                    <td> {{item.temperature | number: "1.0-0"}}° C </td>
+                                    <td (click)="removeFavoriteCity(item)">
+                                        <img src="/assets/svgs/x-lg-white.svg" alt="close">
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </a>
+                </mat-menu>
             </div>
 
         </div>
@@ -62,7 +88,7 @@
                 <img src="/assets/svgs/refresh.svg" alt="refresh">
             </div>
 
-            <div class="heart" matTooltip="Set as favorite!" (click)="setFavorite(myWeather1)">
+            <div class="heart" matTooltip="Set As Favorite!" (click)="setFavorite(myWeather1)">
                 <img [src]="myWeather1.favorite ? '/assets/svgs/heart-fill-red.svg' : '/assets/svgs/heart-white.svg'"
                     [alt]="'icon'">
             </div>
