--- a/src/app/guest/weather-five/weather-five.component.css
+++ b/src/app/guest/weather-five/weather-five.component.css
@@ -10,7 +10,7 @@
 /* ===================================================== */
 .toolbar-container {
     width: 100%;
-    height: 10%;
+    height: 80px;
     background: rgba(0, 0, 0, 0.3);
 }
 
@@ -143,32 +143,29 @@ td img:hover {
 .my-content {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    height: 90%;
-    padding-bottom: 6%;
-    /* border: 2px solid black; */
+    /* height: 90%; */
+    border: 2px solid black;
 }
 
 .city h1 {
     width: 100%;
-    margin-bottom: 60px;
+    margin: 50px 0;
     font-size: 40px;
     line-height: 44px;
     text-align: center;
     color: white;
-    /* border: 1px solid red; */
+    border: 1px solid red;
 }
 
 /* CARDS ----------------------------- */
 .cards {
     display: flex;
     flex-direction: row;
-    align-items: center;
     overflow-x: scroll;
     gap: 20px;
     width: 100%;
-    /* border: 2px solid red; */
+    border: 2px solid red;
 }
 
 .card {
@@ -176,7 +173,7 @@ td img:hover {
     flex-direction: column;
     align-items: center;
     box-sizing: border-box;
-    min-width: 220px;
+    min-width: 220px;    
     padding: 14px;
     color: white;
     background: rgba(0, 0, 0, 0.6);
@@ -213,6 +210,9 @@ hr {
 }
 
 @media(max-width: 1530px) {
+    .city h1 {
+        margin: 40px 0;
+    }
 
     .home,
     .favorites {
@@ -223,10 +223,6 @@ hr {
     td {
         padding: 12px;
     }
-
-    .my-content {
-        padding-bottom: 8%;
-    }
 }
 
 @media(max-width: 1020px) {
@@ -236,12 +232,6 @@ hr {
 
     .mobile {
         display: block;
-    }
-
-    .city h1 {
-        margin-bottom: 50px;
-        font-size: 36px;
-        line-height: 40px;
     }
 
     .home a,
@@ -256,8 +246,10 @@ hr {
         font-size: 17px;
     }
 
-    .my-content {
-        padding-bottom: 10%;
+    .city h1 {
+        margin: 30px 0;
+        font-size: 36px;
+        line-height: 40px;
     }
 
     .cards {
@@ -301,13 +293,16 @@ hr {
         font-size: 16px;
     }
 
-    .my-content {
-        padding-bottom: 12%;
+    .city h1 {
+        margin: 20px 0;
     }
 }
 
 @media(max-width: 550px) {
-
+    .toolbar-container {
+        height: 60px;
+    }
+    
     .home a,
     .favorites a {
         padding: 12px 16px;
@@ -328,12 +323,8 @@ hr {
         font-size: 14px;
     }
 
-    .my-content {
-        padding-bottom: 14%;
-    }
-
     .city h1 {
-        margin-bottom: 40px;
+        margin: 10px 0;
         font-size: 32px;
         line-height: 36px;
     }
