--- a/src/app/guest/weather/weather.component.css
+++ b/src/app/guest/weather/weather.component.css
@@ -143,10 +143,8 @@ td img:hover {
 .my-content {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    align-items: center;    
     height: 90%;
-    padding-bottom: 4%;
     /* border: 2px solid black; */
 }
 
@@ -280,6 +278,10 @@ hr {
 }
 
 @media(max-width: 1020px) {
+    .my-content {
+        overflow-y: scroll;
+    }
+    
     .favorites {
         display: none;
     }
@@ -290,8 +292,12 @@ hr {
 
     .home a,
     .favorites a {
-        padding: 14px 26px;
+        padding: 12px 22px;
         font-size: 17px;
+    }
+
+    .search form {
+        padding: 10px 14px;
     }
 
     th,
@@ -336,12 +342,8 @@ hr {
 
     .home a,
     .favorites a {
-        padding: 12px 16px;
+        padding: 10px 16px;
         font-size: 16px;
-    }
-
-    .search form {
-        padding: 12px 14px;
     }
 
     .search input {
