--- a/src/app/guest/weather/weather.component.css
+++ b/src/app/guest/weather/weather.component.css
@@ -9,6 +9,9 @@
 /* T O O L B A R ======================================= */
 /* ===================================================== */
 .toolbar-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
     width: 100%;
     height: 10%;
     background: rgba(0, 0, 0, 0.3);
@@ -21,53 +24,28 @@
     align-items: center;
     width: 100%;
     height: 100%;
+    max-height: 50px;
     max-width: 1500px;
     margin: auto;
+    padding: 0 14px;
     /* border: 2px solid red; */
 }
 
-/* HOME => FAVORITES --------------- */
-
-/* SEARCH ------------------------- */
-.search {
-    width: 500px;
-}
-
-.search form {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 12px 16px;
-    border: none;
-    border-radius: 50px;
-    background: white;
-}
-
-.search input {
-    font-size: 16px;
-    width: 100%;
-    outline: none;
-    border: none;
-    background: none;
-}
-
-.search img {
-    cursor: pointer;
-}
-
-/* FAVORITES ------------------------- */
+/* HOME = FAVORITES --------------- */
+.home,
 .favorites {
-    position: relative;
-    display: inline-block;
-}
-
-.mobile {
-    display: none;
+    height: 100%;
+    /* border: 1px solid red; */
 }
 
 .home a,
 .favorites a {
-    padding: 16px 30px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+    height: 100%;
     font-size: 18px;
     color: rgb(255, 255, 255);
     cursor: pointer;
@@ -89,6 +67,39 @@
 
 .favorites:hover .dropdown-fav {
     display: block;
+}
+
+/* SEARCH ------------------------- */
+.search {
+    width: 100%;
+    height: 100%;
+    max-width: 500px;
+    padding: 0 14px;
+    /* border: 1px solid red; */
+}
+
+.search form {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    padding: 0 14px;
+    border: none;
+    border-radius: 50px;
+    background: white;
+}
+
+.search input {
+    font-size: 16px;
+    width: 100%;
+    outline: none;
+    border: none;
+    background: none;
+}
+
+.search img {
+    cursor: pointer;
 }
 
 /* TABLE ----------------------------- */
@@ -143,9 +154,9 @@ td img:hover {
 .my-content {
     display: flex;
     flex-direction: column;
-    align-items: center;    
+    align-items: center;
     height: 90%;
-    /* border: 2px solid black; */
+    /* border: 2px solid red; */
 }
 
 /* CARD ----------------------------- */
@@ -264,126 +275,37 @@ hr {
 
 /* TABLE SETTINGS - FROM FAVORITES */
 
-@media(max-width: 1530px) {
-
-    .home,
-    .favorites {
-        margin: 0 14px;
-    }
-
-    th,
-    td {
-        padding: 12px;
-    }
-}
+@media(max-width: 1530px) {}
 
 @media(max-width: 1020px) {
-    .my-content {
-        overflow-y: scroll;
-    }
-    
-    .favorites {
-        display: none;
-    }
-
-    .mobile {
-        display: block;
+    .toolbar-content {
+        max-height: 40px;
     }
 
     .home a,
     .favorites a {
-        padding: 12px 22px;
-        font-size: 17px;
-    }
-
-    .search form {
-        padding: 10px 14px;
-    }
-
-    th,
-    td {
-        padding: 11px;
-        font-size: 17px;
-    }
-
-    .card h1 {
-        margin: 4px 0;
-        font-size: 32px;
-        line-height: 36px;
-    }
-
-    .temperature {
-        font-size: 36px;
-        line-height: 36px;
-    }
-
-    .icon-svg img {
-        width: 100px;
-    }
-}
-
-@media(max-width: 766px) {
-    .search {
-        width: 100%;
-    }
-
-    th,
-    td {
-        padding: 8px;
+        width: 80px;
         font-size: 16px;
     }
 
-    .card {
-        margin: 16px 0;
+    .search input {
+        font-size: 15px;
     }
 }
+
+@media(max-width: 766px) {}
 
 @media(max-width: 550px) {
 
     .home a,
     .favorites a {
-        padding: 10px 16px;
-        font-size: 16px;
+        width: 60px;
+        font-size: 14px;
     }
 
     .search input {
         font-size: 14px;
     }
-
-    th,
-    td {
-        padding: 6px;
-        font-size: 14px;
-    }
-
-    .card {
-        margin: 14px 0;
-        padding: 20px 60px;
-    }
-
-    .card h1 {
-        margin: 2px 0;
-        font-size: 28px;
-        line-height: 32px;
-    }
-
-    .temperature {
-        font-size: 30px;
-        line-height: 30px;
-    }
-
-    .icon-svg img {
-        width: 80px;
-    }
-
-    .history {
-        width: 100%;
-        overflow: scroll;
-    }
 }
 
-@media(max-width: 350px) {
-    .card {
-        padding: 20px 40px;
-    }
-}
+@media(max-width: 350px) {}
