--- a/src/app/guest/weather/weather.component.html
+++ b/src/app/guest/weather/weather.component.html
@@ -17,32 +17,8 @@
                 </form>
             </div>
 
-            <!-- FAVORITES - HOVER ----------------------------------------------------------- -->
-            <div class="favorites desktop">
-                <a>Favs</a>
-                <div class="dropdown-fav">
-                    <table>
-                        <thead>
-                            <tr *ngIf="favorites.length<=0">
-                                <td colspan="4"> - - - empty list - - -</td>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr *ngFor="let item of favorites; index as ind" (click)="getFavoriteCity(item)">
-                                <td> {{ind+1}} </td>
-                                <td> {{item.currentCity}} </td>
-                                <td> {{item.temperature | number: "1.0-0"}}° C </td>
-                                <td (click)="removeFavoriteCity(item)">
-                                    <img src="/assets/svgs/x-lg-white.svg" alt="close">
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-
-            <!-- FAVORITES - MENU BUTTON ----------------------------------------------------- -->
-            <div class="favorites mobile">
+            <!-- FAVORITES - ----------------------------------------------------------------- -->
+            <div class="favorites">
                 <a [matMenuTriggerFor]="beforeMenu">Favs</a>
                 <mat-menu #beforeMenu="matMenu" xPosition="before">
                     <a>
