--- a/src/app/guest/weather/weather.component.css
+++ b/src/app/guest/weather/weather.component.css
@@ -275,7 +275,13 @@ hr {
 
 /* TABLE SETTINGS - FROM FAVORITES */
 
-@media(max-width: 1530px) {}
+@media(max-width: 1530px) {
+
+    th,
+    td {
+        padding: 12px;
+    }
+}
 
 @media(max-width: 1020px) {
     .toolbar-content {
@@ -291,9 +297,27 @@ hr {
     .search input {
         font-size: 15px;
     }
+
+    .history {
+        max-width: 100%;
+        overflow: scroll;
+    }
+
+    th,
+    td {
+        padding: 11px;
+        font-size: 17px;
+    }
 }
 
-@media(max-width: 766px) {}
+@media(max-width: 766px) {
+
+    th,
+    td {
+        padding: 8px;
+        font-size: 16px;
+    }
+}
 
 @media(max-width: 550px) {
 
@@ -304,6 +328,12 @@ hr {
     }
 
     .search input {
+        font-size: 14px;
+    }
+
+    th,
+    td {
+        padding: 6px;
         font-size: 14px;
     }
 }
