--- a/src/app/guest/weather/weather.component.css
+++ b/src/app/guest/weather/weather.component.css
@@ -27,7 +27,7 @@
     max-height: 50px;
     max-width: 1500px;
     margin: auto;
-    padding: 0 14px;
+    padding: 4px 14px;
     /* border: 2px solid red; */
 }
 
@@ -107,7 +107,7 @@ table {
     color: white;
     box-shadow: 0px 6px 10px 0px rgba(0, 0, 0, 0.2);
     border-collapse: collapse;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.6);
 }
 
 thead tr {
@@ -127,7 +127,7 @@ tr:last-child {
 }
 
 tr:hover {
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.6);
 }
 
 th,
@@ -169,7 +169,7 @@ td img:hover {
     margin: 20px 0;
     padding: 20px 80px;
     color: white;
-    background: rgba(0, 0, 0, 0.3);
+    background: rgba(0, 0, 0, 0.4);
     box-shadow: 0px 6px 10px 0px rgba(62, 62, 62, 0.2);
     /* border: 2px solid grey; */
 }
@@ -230,7 +230,7 @@ td img:hover {
 }
 
 .icon-svg img {
-    width: 120px;
+    width: 100px;
     /* border: 1px solid red; */
 }
 
@@ -298,15 +298,38 @@ hr {
         font-size: 15px;
     }
 
-    .history {
-        max-width: 100%;
-        overflow: scroll;
-    }
-
     th,
     td {
         padding: 11px;
         font-size: 17px;
+    }
+
+    .my-content {
+        overflow-y: scroll;
+    }
+
+    .card {
+        padding: 20px 60px;
+    }
+
+    .card h1 {
+        margin: 0;
+        font-size: 32px;
+        line-height: 38px;
+    }
+
+    .temperature {
+        font-size: 36px;
+        line-height: 36px;
+    }
+
+    .icon-svg img {
+        width: 80px;
+    }
+
+    .history {
+        max-width: 100%;
+        overflow: scroll;
     }
 }
 
@@ -335,6 +358,24 @@ hr {
     td {
         padding: 6px;
         font-size: 14px;
+    }
+
+    .card {
+        padding: 20px 40px;
+    }
+
+    .card h1 {
+        font-size: 28px;
+        line-height: 34px;
+    }
+
+    .temperature {
+        font-size: 32px;
+        line-height: 32px;
+    }
+
+    .icon-svg img {
+        width: 60px;
     }
 }
 
