--- a/src/app/guest/weather-five/weather-five.component.html
+++ b/src/app/guest/weather-five/weather-five.component.html
@@ -17,32 +17,8 @@
                 </form>
             </div>
 
-            <!-- FAVORITES - HOVER ----------------------------------------------------------- -->
-            <div class="favorites desktop">
-                <a>Favs</a>
-                <div class="dropdown-fav">
-                    <table>
-                        <thead>
-                            <tr *ngIf="favorites.length<=0">
-                                <td colspan="4"> - - - empty list - - -</td>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr *ngFor="let item of favorites; index as ind" (click)="getFavoriteCity(item)">
-                                <td> {{ind+1}} </td>
-                                <td> {{item.currentCity}} </td>
-                                <td> {{item.temperature | number: "1.0-0"}}° C </td>
-                                <td (click)="removeFavoriteCity(item)">
-                                    <img src="/assets/svgs/x-lg-white.svg" alt="close">
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-
-            <!-- FAVORITES - MENU BUTTON ----------------------------------------------------- -->
-            <div class="favorites mobile">
+            <!-- FAVORITES - ----------------------------------------------------------------- -->
+            <div class="favorites">
                 <a [matMenuTriggerFor]="beforeMenu">Favs</a>
                 <mat-menu #beforeMenu="matMenu" xPosition="before">
                     <a>
@@ -83,35 +59,37 @@
         </div>
 
         <!-- C A R D S ----------------------------------------------------------------------- -->
-        <div class="cards" *ngIf="myWeather5.currentCity">
+        <div class="cards-container">
+            <div class="cards" *ngIf="myWeather5.currentCity">
 
-            <div class="card" *ngFor="let card of myWeather5.list">
+                <div class="card" *ngFor="let card of myWeather5.list">
 
-                <p>{{card.dt_txt}}</p>
+                    <p>{{card.dt_txt}}</p>
 
-                <p class="temperature">{{card.main?.temp | number: "1.0-0"}}° C</p>
+                    <p class="temperature">{{card.main?.temp | number: "1.0-0"}}° C</p>
 
-                <div class="icon-svg">
-                    <img src="https://openweathermap.org/img/wn/{{card.weather[0].icon}}@2x.png" alt="icon">
-                    <p>{{card.weather[0].main}}</p>
-                </div>
+                    <div class="icon-svg">
+                        <img src="https://openweathermap.org/img/wn/{{card.weather[0].icon}}@2x.png" alt="icon">
+                        <p>{{card.weather[0].main}}</p>
+                    </div>
 
-                <hr>
+                    <hr>
 
-                <div class="details">
-                    <p>Pressure: {{card.main?.pressure * 0.750061683 | number: "1.0-0"}} mmHg</p>
+                    <div class="details">
+                        <p>Pressure: {{card.main?.pressure * 0.750061683 | number: "1.0-0"}} mmHg</p>
 
-                    <p>Humidity: {{card.main?.humidity}} %</p>
+                        <p>Humidity: {{card.main?.humidity}} %</p>
 
-                    <p> Feels like: {{card.main?.feels_like | number: "1.0-0"}}° C </p>
-                    <p>
-                        Max/Min: {{card.main?.temp_max | number: "1.0-0"}}°
-                        / {{card.main?.temp_min | number: "1.0-0"}}° C
-                    </p>
+                        <p> Feels like: {{card.main?.feels_like | number: "1.0-0"}}° C </p>
+                        <p>
+                            Max/Min: {{card.main?.temp_max | number: "1.0-0"}}°
+                            / {{card.main?.temp_min | number: "1.0-0"}}° C
+                        </p>
+                    </div>
+
                 </div>
 
             </div>
-
         </div>
 
     </div>
