--- a/src/app/guest/home/home.component.css
+++ b/src/app/guest/home/home.component.css
@@ -4,19 +4,22 @@
 }
 
 .my-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     height: 100%;
     /* border: 2px solid black; */
 }
 
 .title h1 {
     width: 100%;
-    margin-top: 80px;
-    text-align: center;
+    margin-bottom: 50px;
     font-size: 60px;
     line-height: 60px;
     font-weight: 900;
+    text-align: center;
     color: white;
-    /* -webkit-text-stroke: 1px black; */
     /* border: 2px solid black; */
 }
 
@@ -25,10 +28,10 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap: 40px;
+    gap: 30px;
     width: 100%;
-    height: 100%;
-    padding-bottom: 120px;
+    height: 40%;    
+    padding-bottom: 100px;
     /* border: 2px solid black; */
 }
 
@@ -37,9 +40,10 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    width: 460px;
-    height: 230px;
-    font-size: 20px;
+    width: 50%;
+    height: 100%;
+    min-height: 100px;
+    font-size: 30px;
     color: rgb(255, 255, 255);
     transition: 0.2s;
     border: none;
@@ -49,21 +53,10 @@
 }
 
 .buttons a:hover {
-    font-size: 20.5px;
+    font-size: 31px;
     transform: scale(1.01);
     box-shadow: 3px 3px 4px rgba(0, 0, 0, 0.5);
     background: rgba(0, 0, 0, 0.4);
-}
-
-@media(max-width: 1260px) {
-    .title h1 {
-        font-size: 50px;
-        line-height: 50px;
-    }
-
-    .buttons{
-        gap: 30px;
-    }
 }
 
 @media(max-width: 1020px) {
@@ -73,18 +66,20 @@
         line-height: 44px;
     }
 
-    .buttons {
-        flex-direction: column;
+    .buttons {        
         padding-bottom: 100px;
     }
 
     .buttons a {
-        width: 400px;
-        height: 200px;
+        font-size: 26px;
+    }
+
+    .buttons a:hover {
+        font-size: 27px;
     }
 }
 
-@media(max-width: 450px) {
+@media(max-width: 550px) {
     .title h1 {
         margin-top: 40px;
         font-size: 36px;
@@ -92,16 +87,18 @@
     }
 
     .buttons {
+        flex-direction: column;
+        height: 60%;
         padding-bottom: 80px;
     }
 
     .buttons a {
         width: 100%;
         height: 150px;
-        font-size: 18px;
+        font-size: 22px;
     }
 
     .buttons a:hover {
-        font-size: 18.5px;
+        font-size: 23px;
     }
 }
