--- a/src/app/guest/weather-five/weather-five.component.css
+++ b/src/app/guest/weather-five/weather-five.component.css
@@ -9,8 +9,11 @@
 /* T O O L B A R ======================================= */
 /* ===================================================== */
 .toolbar-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
     width: 100%;
-    height: 80px;
+    height: 10%;
     background: rgba(0, 0, 0, 0.3);
 }
 
@@ -21,53 +24,28 @@
     align-items: center;
     width: 100%;
     height: 100%;
+    max-height: 50px;
     max-width: 1500px;
     margin: auto;
+    padding: 4px 14px;
     /* border: 2px solid red; */
 }
 
-/* HOME => FAVORITES --------------- */
-
-/* SEARCH ------------------------- */
-.search {
-    width: 500px;
-}
-
-.search form {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 12px 16px;
-    border: none;
-    border-radius: 50px;
-    background: white;
-}
-
-.search input {
-    font-size: 16px;
-    width: 100%;
-    outline: none;
-    border: none;
-    background: none;
-}
-
-.search img {
-    cursor: pointer;
-}
-
-/* FAVORITES ------------------------- */
+/* HOME = FAVORITES --------------- */
+.home,
 .favorites {
-    position: relative;
-    display: inline-block;
-}
-
-.mobile {
-    display: none;
+    height: 100%;
+    /* border: 1px solid red; */
 }
 
 .home a,
 .favorites a {
-    padding: 16px 30px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+    height: 100%;
     font-size: 18px;
     color: rgb(255, 255, 255);
     cursor: pointer;
@@ -91,12 +69,45 @@
     display: block;
 }
 
+/* SEARCH ------------------------- */
+.search {
+    width: 100%;
+    height: 100%;
+    max-width: 500px;
+    padding: 0 14px;
+    /* border: 1px solid red; */
+}
+
+.search form {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    padding: 0 14px;
+    border: none;
+    border-radius: 50px;
+    background: white;
+}
+
+.search input {
+    font-size: 16px;
+    width: 100%;
+    outline: none;
+    border: none;
+    background: none;
+}
+
+.search img {
+    cursor: pointer;
+}
+
 /* TABLE ----------------------------- */
 table {
     color: white;
     box-shadow: 0px 6px 10px 0px rgba(0, 0, 0, 0.2);
     border-collapse: collapse;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.6);
 }
 
 thead tr {
@@ -116,7 +127,7 @@ tr:last-child {
 }
 
 tr:hover {
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.6);
 }
 
 th,
@@ -144,28 +155,33 @@ td img:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* height: 90%; */
-    border: 2px solid black;
+    height: 90%;
+    /* border: 2px solid red; */
 }
 
 .city h1 {
     width: 100%;
-    margin: 50px 0;
-    font-size: 40px;
-    line-height: 44px;
+    margin: 40px 0;
+    font-size: 36px;
+    line-height: 40px;
     text-align: center;
     color: white;
-    border: 1px solid red;
+    /* border: 1px solid red; */
 }
 
 /* CARDS ----------------------------- */
+.cards-container {
+    width: 100%;
+    /* border: 2px solid greenyellow; */
+}
+
 .cards {
     display: flex;
     flex-direction: row;
-    overflow: scroll;
+    overflow-x: scroll;
     gap: 20px;
     width: 100%;
-    border: 2px solid red;
+    /* border: 2px solid red; */
 }
 
 .card {
@@ -173,20 +189,26 @@ td img:hover {
     flex-direction: column;
     align-items: center;
     box-sizing: border-box;
-    min-width: 220px;    
+    min-width: 220px;
     padding: 14px;
     color: white;
-    background: rgba(0, 0, 0, 0.6);
+    background: rgba(0, 0, 0, 0.4);
+}
+
+.card p {
+    margin: 0;
+    /* border: 1px solid red; */
 }
 
 .temperature {
-    font-size: 40px;
+    font-size: 36px;
+    line-height: 36px;
     font-weight: 600;
     text-align: center;
 }
 
 .icon-svg img {
-    width: 80px;
+    width: 100px;
     /* border: 2px solid black; */
 }
 
@@ -195,6 +217,7 @@ td img:hover {
     padding: 0;
     font-size: 24px;
     line-height: 28px;
+    text-align: center;
     /* border: 2px solid black; */
 }
 
@@ -210,14 +233,6 @@ hr {
 }
 
 @media(max-width: 1530px) {
-    .city h1 {
-        margin: 40px 0;
-    }
-
-    .home,
-    .favorites {
-        margin: 0 14px;
-    }
 
     th,
     td {
@@ -226,18 +241,22 @@ hr {
 }
 
 @media(max-width: 1020px) {
-    .favorites {
-        display: none;
-    }
-
-    .mobile {
-        display: block;
+    .toolbar-content {
+        max-height: 40px;
     }
 
     .home a,
     .favorites a {
-        padding: 14px 26px;
-        font-size: 17px;
+        width: 80px;
+        font-size: 16px;
+    }
+
+    .search input {
+        font-size: 15px;
+    }
+
+    .search img {
+        width: 15px;
     }
 
     th,
@@ -248,8 +267,16 @@ hr {
 
     .city h1 {
         margin: 30px 0;
-        font-size: 36px;
-        line-height: 40px;
+        font-size: 34px;
+        line-height: 38px;
+    }
+
+    .my-content {
+        overflow-y: scroll;
+    }
+
+    .cards-container {
+        overflow-y: scroll;
     }
 
     .cards {
@@ -260,61 +287,48 @@ hr {
         min-width: 200px;
     }
 
-    .card p {
-        margin-bottom: 4px;
-    }
-
     .temperature {
-        font-size: 36px;
+        font-size: 32px;
+        line-height: 32px;
     }
 
     .icon-svg img {
-        width: 70px;
+        width: 80px;
     }
 
     .icon-svg p {
         font-size: 22px;
-        line-height: 26px;
+        line-height: 24px;
     }
 
     hr {
-        margin: 14px 0;
+        margin: 10px 0;
     }
 }
 
 @media(max-width: 766px) {
-    .search {
-        width: 100%;
-    }
 
     th,
     td {
         padding: 8px;
         font-size: 16px;
     }
-
-    .city h1 {
-        margin: 20px 0;
-    }
 }
 
 @media(max-width: 550px) {
-    .toolbar-container {
-        height: 60px;
-    }
-    
+
     .home a,
     .favorites a {
-        padding: 12px 16px;
-        font-size: 16px;
-    }
-
-    .search form {
-        padding: 12px 14px;
+        width: 60px;
+        font-size: 14px;
     }
 
     .search input {
         font-size: 14px;
+    }
+
+    .search img {
+        width: 14px;
     }
 
     th,
@@ -324,9 +338,9 @@ hr {
     }
 
     .city h1 {
-        margin: 10px 0;
-        font-size: 32px;
-        line-height: 36px;
+        margin: 20px 0;
+        font-size: 28px;
+        line-height: 32px;
     }
 
     .cards {
@@ -337,12 +351,9 @@ hr {
         min-width: 180px;
     }
 
-    .card p {
-        margin-bottom: 2px;
-    }
-
     .temperature {
-        font-size: 32px;
+        font-size: 28px;
+        line-height: 28px;
     }
 
     .icon-svg img {
@@ -351,14 +362,10 @@ hr {
 
     .icon-svg p {
         font-size: 20px;
-        line-height: 24px;
+        line-height: 22px;
     }
 
     hr {
-        margin: 12px 0;
+        margin: 6px 0;
     }
 }
-
-/* @media(max-width: 350px) {
-
-} */
