--- a/src/app/guest/home/home.component.html
+++ b/src/app/guest/home/home.component.html
@@ -2,7 +2,7 @@
     <div class="my-content">
 
         <div class="title">
-            <h1>Weather forecasts</h1>
+            <h1>Weather forecast</h1>
         </div>
 
         <div class="buttons">
