--- a/src/app/guest/weather-five/weather-five.component.css
+++ b/src/app/guest/weather-five/weather-five.component.css
@@ -136,16 +136,27 @@ td {
     padding: 14px;
     font-size: 18px;
     white-space: nowrap;
-    transition: 0.3s;
     /* border: 2px solid red; */
 }
 
-th img {
-    cursor: pointer;
+.btn-cont {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    transition: 0.2s;
+    /* border: 1px solid red; */
 }
 
-th img:hover,
-td img:hover {
+.btn-cont img {
+    width: 16px;
+    cursor: pointer;
+    /* border: 1px solid pink; */
+}
+
+.btn-cont img:hover {
     transform: scale(1.15);
 }
 
@@ -265,6 +276,10 @@ hr {
         font-size: 17px;
     }
 
+    .btn-cont img {
+        width: 15px;
+    }
+
     .city h1 {
         margin: 30px 0;
         font-size: 34px;
@@ -336,6 +351,10 @@ hr {
     td {
         padding: 6px;
         font-size: 14px;
+    }
+
+    .btn-cont img {
+        width: 14px;
     }
 
     .city h1 {
