--- a/src/app/guest/weather-five/weather-five.component.css
+++ b/src/app/guest/weather-five/weather-five.component.css
@@ -50,6 +50,7 @@
     color: rgb(255, 255, 255);
     cursor: pointer;
     border: none;
+    border-radius: 4px;
     background: rgba(0, 0, 0, 0.3);
 }
 
